--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,6 @@ stages:
   - dockerbuild
   - sonardev
   - sonar
-  - deploy
 
 cache:
   paths:
@@ -21,7 +20,7 @@ cache:
 
 build:
   stage: build
-  image: node:lts-alpine
+  image: node:12.14.1-alpine3.11
   script: npm i && npm run build
 
 dockerbuild:
@@ -35,7 +34,7 @@ dockerbuild:
 
 sonar-dev:
   stage: sonardev
-  image: node:lts-alpine
+  image: node:12.14.1-alpine3.11
   script:
     - export SONAR_SCANNER_VERSION=4.0.0.1744
     - export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux
@@ -52,7 +51,7 @@ sonar-dev:
 
 sonar:
   stage: sonar
-  image: node:lts-alpine
+  image: node:12.14.1-alpine3.11
   script:
     - export SONAR_SCANNER_VERSION=4.0.0.1744
     - export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux
@@ -64,14 +63,5 @@ sonar:
     - export PATH=$SONAR_SCANNER_HOME/bin:$PATH
     - export SONAR_SCANNER_OPTS="-server"
     - sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.sources=. -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_LOGIN
-  only:
-    - /master/
-
-deploy:
-  stage: deploy
-  image: hublo/kubectl:latest
-  script:
-    - echo -n $KUBE_CONFIG | base64 -d > ./config
-    - kubectl set image deployment/webapp $CONTAINER_NAME=$CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --kubeconfig ./config --namespace default
   only:
     - /master/
