--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "…",
-      "pre-commit": "git-precommit-checks && precise-commit"
+      "pre-commit": "precise-commit"
     }
   },
   "hooks": {
