add more sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
 sonar.login=$SONAR_LOGIN
 sonar.projectKey=$SONAR_PROJECT
 sonar.organization=$SONAR_ORGANIZATION
+sonar.host.url=https://sonarcloud.io
 
 sonar.branch.name=$branch
+sonar.sources=.
