--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.login=$SONAR_LOGIN
+sonar.password=
 sonar.projectKey=$SONAR_PROJECT
 sonar.organization=$SONAR_ORGANIZATION
 sonar.host.url=https://sonarcloud.io
