--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "…",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "precise-commit"
     }
   },
