add sonar token

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
+sonar.token=$SONAR_LOGIN
 sonar.projectKey=$SONAR_PROJECT
 sonar.organization=$SONAR_ORGANIZATION
 sonar.host.url=https://sonarcloud.io
