--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@ variables:
   # Use TLS https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#tls-enabled
   DOCKER_HOST: tcp://docker:2376
   DOCKER_TLS_CERTDIR: "/certs"
+  SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
+  GIT_DEPTH: "0"
 
 stages:
   - build
@@ -32,24 +34,16 @@ dockerbuild:
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
     - docker push $CI_REGISTRY_IMAGE:latest
 
-sonar-dev:
-  stage: sonardev
-  image:
-    name: sonarsource/sonar-scanner-cli:4.2
-    entrypoint: [""]
-  variables:
-    branch: develop
-  script: sonar-scanner
-  only:
-    - /develop/
-
 sonar:
   stage: sonar
   image:
     name: sonarsource/sonar-scanner-cli:4.2
     entrypoint: [""]
-  variables:
-    branch: master
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
   script: sonar-scanner
   only:
-    - /master/
+    - master
+    - develop
