--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ yarn-debug.log*
 yarn-error.log*
 
 .idea
+
+# dont push to git videos from cypress
+cypress/videos
+
+# environnement variables
+.env
