--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
     "bootstrap": "4.4.1",
+    "changelog": "^1.4.2",
     "git-precommit-checks": "^3.0.0",
+    "global": "^4.4.0",
     "husky": "^4.0.10",
     "precise-commits": "^1.0.2",
     "react": "16.12.0",
@@ -25,7 +27,10 @@
     "test": "react-scripts test",
     "test:cypress": "start-server-and-test start http://localhost:8080 cypress",
     "cypress": "cypress run",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "changelog-init": "conventional-changelog -i CHANGELOG.md -s -r 0",
+    "changelog": "conventional-changelog -i CHANGELOG.md -s",
+    "changelog-git": "npm run changelog && git add CHANGELOG.md && git commit -m 'docs(changelog): updated' && git push origin master"
   },
   "commitlint": {
     "extends": [
