--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
     "bootstrap": "4.4.1",
-    "git-precommit-checks": "^3.0.0",
-    "husky": "^4.0.10",
-    "precise-commits": "^1.0.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.3.0",
     "reactstrap": "8.4.0"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "8.3.5",
+    "@commitlint/config-conventional": "8.3.4",
+    "git-precommit-checks": "3.0.0",
+    "husky": "4.2.1",
+    "precise-commits": "1.0.2",
+    "prettier": "1.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
