--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@testing-library/user-event": "7.1.2",
     "bootstrap": "4.4.1",
     "git-precommit-checks": "^3.0.0",
-    "husky": "^4.0.10",
+    "global": "^4.4.0",
+    "husky": "^4.2.1",
     "precise-commits": "^1.0.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
