--- a/package.json
+++ b/package.json
@@ -3,23 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "4.2.4",
-    "@testing-library/react": "9.3.2",
-    "@testing-library/user-event": "7.1.2",
     "bootstrap": "4.4.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.3.1",
     "reactstrap": "8.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.3.2",
+    "@testing-library/user-event": "7.1.2",
     "cypress": "3.8.2",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
     "git-precommit-checks": "3.0.0",
     "husky": "4.2.1",
+    "jest": "24.9.0",
     "precise-commits": "1.0.2",
     "prettier": "1.19.1",
     "start-server-and-test": "1.10.7"
@@ -28,7 +31,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test:cypress": "start-server-and-test start http://localhost:8080 cypress",
+    "test:cypress": "start-server-and-test start http://release.highlander.fail cypress",
     "cypress": "cypress run",
     "eject": "react-scripts eject",
     "changelog-init": "conventional-changelog -i CHANGELOG.md -s -r 0",
