feat(sonar): change sonar node image + yarn install prod in dockerfile

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ sonar-dev:
     - rm -rf $SONAR_SCANNER_HOME
     - mkdir -p $SONAR_SCANNER_HOME
     - curl -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux.zip
-    - unzip $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
+    - unzip --symlinks $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
     - rm $HOME/.sonar/sonar-scanner.zip
     - export PATH=$SONAR_SCANNER_HOME/bin:$PATH
     - export SONAR_SCANNER_OPTS="-server"
@@ -72,7 +72,7 @@ sonar:
     - rm -rf $SONAR_SCANNER_HOME
     - mkdir -p $SONAR_SCANNER_HOME
     - curl -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux.zip
-    - unzip $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
+    - unzip --symlinks $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
     - rm $HOME/.sonar/sonar-scanner.zip
     - export PATH=$SONAR_SCANNER_HOME/bin:$PATH
     - export SONAR_SCANNER_OPTS="-server"
