--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,11 +25,15 @@ build:
   stage: build
   image: node:12.14.1-alpine3.11
   script: yarn install && yarn run build
+  only :
+    - develop
 
 test:
   stage: test
   image: node:12.14.1-alpine3.11
   script: yarn run test
+  only:
+    - develop
 
 dockerbuild:
   stage: dockerbuild
@@ -59,8 +63,6 @@ sonar-dev:
     - export PATH=$SONAR_SCANNER_HOME/bin:$PATH
     - export SONAR_SCANNER_OPTS="-server"
     - sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.branch.name=dev -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.sources=. -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_LOGIN -Dsonar.javascript.file.suffixes=.js,.jsx
-  only:
-    - /develop/
 
 sonar:
   stage: sonar
