--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,11 +26,15 @@ build:
   stage: build
   image: node:12.14.1-alpine3.11
   script: yarn install && yarn run build
+  only:
+    - /develop/
 
 test:
   stage: test
   image: node:12.14.1-alpine3.11
   script: yarn run test
+  only:
+    - /develop/
 
 dockerbuild:
   stage: dockerbuild
