--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom --testResultsProcessor <pathToNodeModules/jestSonarReporter/index.js>",
+    "test": "react-scripts test --coverage --watchAll=true",
     "test:cypress": "start-server-and-test start http://release.highlander.fail cypress",
     "cypress": "cypress run",
     "eject": "react-scripts eject",
@@ -45,8 +45,7 @@
     ]
   },
   "jestSonar": {
-    "sonar56x": true,
-    "reportPath": "testResults",
+    "reportPath": ".",
     "reportFile": "sonar-report.xml",
     "indent": 4
   },
