--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,8 @@
 sonar.javascript.file.suffixes=.js,.jsx
+sonar.language=js
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
 sonar.host.url=https://sonarcloud.io
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.testExecutionReportPaths=sonar-report.xml
+sonar.javascript.lcov.reportPath=coverage/coverage.lcov
