feat(sonar): final test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,9 @@ build:
 test:
   stage: test
   image: node:12.14.1-alpine3.11
-  script: yarn run test
+  script:
+    - yarn test
+    - q
 
 dockerbuild:
   stage: dockerbuild
