--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "jestSonar": {
     "reportPath": ".",
-    "reportFile": "sonar-report.xml",
+    "reportFile": "clover.xml",
     "indent": 4
   },
   "husky": {
