--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --coverage",
+    "test": "react-scripts test --coverage --reporters='xml'",
     "test:cypress": "start-server-and-test start http://release.highlander.fail cypress",
     "cypress": "cypress run",
     "eject": "react-scripts eject",
