--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,9 @@ sonar.language=js
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
 sonar.host.url=https://sonarcloud.io
+sonar.tests=.
+sonar.inclusions=**/*.js
+sonar.exclusions=node_modules/*,**/*.test.js
+sonar.test.inclusions=**/*.test.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=coverage/clover.xml
-sonar.javascript.lcov.reportPath=coverage/coverage.lcov
