--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,7 @@ sonar-dev:
     SONAR_HOST_URL: $SONAR_HOST_URL
     GIT_DEPTH: 0
   script:
-    - ls -la
+    - cd ./coverage && ls -la
     - sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.branch.name=dev -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.login=$SONAR_LOGIN
 
 sonar:
