--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,5 +7,5 @@ sonar.tests=.
 sonar.inclusions=**/*.js
 sonar.exclusions=node_modules/*,**/*.test.js
 sonar.test.inclusions=**/*.test.js
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.testExecutionReportPaths=coverage/clover.xml
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.testExecutionReportPaths=./coverage/clover.xml
