--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,6 @@ build:
   stage: build
   image: node:12.14.1-alpine3.11
   script: yarn install && yarn run build
-  only :
-    - /develop/
 
 test:
   stage: test
@@ -58,7 +56,7 @@ sonar-dev:
     GIT_DEPTH: 0
   script:
     - cd ./coverage && ls -la && cd ..
-    - sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.branch.name=dev -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.login=$SONAR_LOGIN -Dsonar.testExecutionReportPaths=./coverage/clover.xml -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
+    - sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.branch.name=dev -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.login=$SONAR_LOGIN -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info -Dsonar.testExecutionReportPaths=./coverage/clover.xml
 
 sonar:
   stage: sonar
