--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,8 +56,8 @@ sonar-dev:
     SONAR_HOST_URL: $SONAR_HOST_URL
     GIT_DEPTH: 0
   script:
-    - cd ./coverage && ls -la && cd ..
-    - sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.branch.name=dev -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.login=$SONAR_LOGIN -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info -Dsonar.coverageReportPaths=coverage/clover.xml
+    - cd ./coverage && ls -la && cat clover.xml && cd ..
+    - sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.branch.name=dev -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.login=$SONAR_LOGIN
 
 sonar:
   stage: sonar
