--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,8 @@ build:
   stage: build
   image: node:12.14.1-alpine3.11
   script: yarn install && yarn run build
+  only:
+    - develop
 
 test:
   stage: test
@@ -58,7 +60,7 @@ sonar-dev:
   script:
     - cd ./coverage
     - ls -la
-    - sed -i 's/xml version="1.0"/xml version="1"/g' INPUTFILE
+    - sed -i 's/xml version="1.0"/xml version="1"/g' clover.xml
     - cd ..
     - sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.branch.name=dev -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.login=$SONAR_LOGIN
 
