--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,7 @@ sonar-dev:
   script:
     - cd ./coverage
     - ls -la
-    - sed -i 's/xml version="1.0"/xml version="1"/g' clover.xml
+    - sed -i 's/1.0/1/' ./clover.xml
     - cd ..
     - sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.branch.name=dev -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.login=$SONAR_LOGIN
 
