--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,6 @@ sonar.sources=.
 sonar.host.url=https://sonarcloud.io
 sonar.tests=.
 sonar.inclusions=**/*.js
-sonar.exclusions=node_modules/*,**/*.test.js
+sonar.exclusions=node_modules/*,**/*.test.js,cypress/*
 sonar.test.inclusions=**/*.test.js
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.coverageReportPaths=coverage/clover.xml
