feat(sonar): add coverage to cache

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ sonar-dev:
     SONAR_HOST_URL: $SONAR_HOST_URL
     GIT_DEPTH: 0
   script:
-    - cd ./coverage
+    - cd coverage
     - ls -la
     - cd ..
     - sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.branch.name=dev -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.login=$SONAR_LOGIN
