--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,5 @@ sonar.tests=.
 sonar.inclusions=**/*.js
 sonar.exclusions=node_modules/*,**/*.test.js,cypress/*
 sonar.test.inclusions=**/*.test.js
-sonar.coverageReportPaths=coverage/clover.xml
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+#sonar.coverageReportPaths=coverage/clover.xml
