--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,8 @@
-image: docker:19.03.1
-
-services:
-  - docker:19.03.1-dind
-
 variables:
   # Use TLS https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#tls-enabled
   DOCKER_HOST: tcp://docker:2376
   DOCKER_TLS_CERTDIR: "/certs"
+  DOCKER_DRIVER: overlay
 
 stages:
   - build
@@ -36,6 +32,9 @@ test:
 
 dockerbuild:
   stage: dockerbuild
+  image: docker:19.03.1
+  services:
+    - docker:19.03.1-dind
   script:
     - echo $CI_REGISTRY_PASSWORD | docker login --username $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
     - docker build --cache-from $CI_REGISTRY_IMAGE:latest --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest .
