--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,6 @@ sonar.language=js
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
 sonar.host.url=https://sonarcloud.io
+sonar.exclusions=node_modules/*,**/*.test.js,cypress/*
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 #sonar.coverageReportPaths=coverage/clover.xml
