feat(sonar): good coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,6 @@ sonar.sourceEncoding=UTF-8
 sonar.sources=.
 sonar.host.url=https://sonarcloud.io
 sonar.exclusions=node_modules/*,**/*.test.js,cypress/*
+sonar.test.exclusion=cypress/*
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 #sonar.coverageReportPaths=coverage/clover.xml
