--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,7 @@ dockerbuild:
     - docker push $CI_REGISTRY_IMAGE:latest
   only:
     - /master/
+    - /develop/
     - /^release-.*/
 
 sonar-dev:
@@ -78,7 +79,7 @@ deploy:
     - echo -n $KUBE_CONFIG | base64 -d > ./config
     - kubectl set image deployment/highlanderfront $CONTAINER_NAME=$CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --kubeconfig ./config --namespace msprci-develop
   only:
-    - master
+    - develop
 
 end-2-end:
   stage: end2end
