--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.3.1",
-    "reactstrap": "8.4.0"
+    "reactstrap": "8.4.1"
   },
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
-    "@testing-library/jest-dom": "4.2.4",
-    "@testing-library/react": "9.3.2",
-    "@testing-library/user-event": "7.1.2",
+    "@testing-library/dom": "6.12.2",
+    "@testing-library/jest-dom": "5.1.1",
+    "@testing-library/react": "9.4.0",
+    "@testing-library/user-event": "8.1.0",
     "cypress": "3.8.2",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
