--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.3.1",
-    "reactstrap": "8.4.0"
+    "reactstrap": "8.4.0",
+    "jest-coverage-badges": "^1.1.2"
   },
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
@@ -38,7 +39,9 @@
     "test:cypress": "start-server-and-test start http://release.highlander.fail cypress",
     "cypress": "cypress run",
     "eject": "react-scripts eject",
-    "version": "auto-changelog -p && git add CHANGELOG.md"
+    "version": "auto-changelog -p && git add CHANGELOG.md",
+    "test:coverage": "yarn test -- --coverage",
+    "test:badges": "yarn run test:coverage  && jest-coverage-badges"
   },
   "commitlint": {
     "extends": [
@@ -73,6 +76,13 @@
     "globals": {
       "cy": true
     }
+  },
+  "jest": {
+    "coverageReporters": [
+      "json-summary",
+      "text",
+      "lcov"
+    ]
   },
   "browserslist": {
     "production": [
