--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,19 +30,36 @@ test:
   script: CI=true npm test
 
 dockerbuild:
+  extends: .template-docker-build
+  variables:
+    API_URL: api.highlander.fail
+  only:
+    - /master/
+
+dockerbuild-develop:
+  extends: .template-docker-build
+  variables:
+    API_URL: api.develop.highlander.fail
+  only:
+    - /develop/
+
+dockerbuild-release:
+  extends: .template-docker-build
+  variables:
+    API_URL: api.release.highlander.fail
+  only:
+    - /^release-.*/
+
+.template-docker-build:
   stage: dockerbuild
   image: docker:19.03.1
   services:
     - docker:19.03.1-dind
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build --cache-from $CI_REGISTRY_IMAGE:latest --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest .
+    - docker build --cache-from $CI_REGISTRY_IMAGE:latest --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest . --build-arg API_URL=$API_URL
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
     - docker push $CI_REGISTRY_IMAGE:latest
-  only:
-    - /master/
-    - /develop/
-    - /^release-.*/
 
 sonar:
   stage: sonar
