--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --coverage",
     "test:cypress": "start-server-and-test start http://release.highlander.fail cypress",
-    "cypress": "cypress run",
+    "cypress": "cypress install && cypress run",
     "eject": "react-scripts eject",
     "version": "auto-changelog -p && git add CHANGELOG.md",
     "test:badges": "npm run test -- --watchAll=true && jest-coverage-badges"
