exlude coverage files from sonar analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,5 @@ sonar.language=js
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
 sonar.host.url=https://sonarcloud.io
-sonar.exclusions=node_modules/**,**/*.test.js,cypress/**
+sonar.exclusions=node_modules/**,**/*.test.js,cypress/**,coverage/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
