--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,17 +1,14 @@
 server {
+    listen 80;
+    listen [::]:80;
 
-  listen 4002;
+    root /usr/share/nginx/html;
 
-  location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri $uri/ /index.html;
-  }
+    index index.html index.htm;
 
-  error_page   500 502 503 504  /50x.html;
+    server_name release.highlander.fail;
 
-  location = /50x.html {
-    root   /usr/share/nginx/html;
-  }
-
+    location / {
+        try_files $uri $uri/ /index.html;
+     }
 }
