--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "9.4.0",
     "@testing-library/user-event": "8.1.0",
+    "coveralls": "3.0.9",
     "cypress": "4.0.1",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
@@ -35,6 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --coverage",
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
     "test:cypress": "start-server-and-test start http://release.highlander.fail cypress",
     "cypress": "cypress run",
     "eject": "react-scripts eject",
