feat(coveralls): add coveralls automatic

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,8 @@ test:
   stage: test
   image: node:12.14.1-alpine3.11
   script: CI=true npm test
+  after_script:
+    - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls
 
 dockerbuild:
   extends: .template-docker-build
