--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "git-precommit-checks": "3.0.0",
     "husky": "4.2.1",
     "jest": "24.9.0",
-    "jest-coverage-badges": "1.1.2",
     "jest-sonar-reporter": "2.0.0",
     "precise-commits": "1.0.2",
     "prettier": "1.19.1",
@@ -36,12 +35,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --coverage",
-    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/coveralls/bin/coveralls.js",
     "test:cypress": "start-server-and-test start http://release.highlander.fail cypress",
     "cypress": "cypress run",
     "eject": "react-scripts eject",
     "version": "auto-changelog -p && git add CHANGELOG.md",
-    "test:badges": "npm run test -- --watchAll=true && jest-coverage-badges",
     "cy:verify": "cypress install && cypress verify"
   },
   "commitlint": {
