--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ build:
 test:
   stage: test
   image: node:12.14.1-alpine3.11
-  script: CI=true npm test
+  script: CI=true npm test -- --coverage
   after_script:
     - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls
 
