--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ dockerbuild-develop:
   variables:
     API_URL: http://api.develop.highlander.fail
   only:
-    - /develop/
+    - /developp/
 
 dockerbuild-release:
   extends: .template-docker-build
@@ -66,14 +66,14 @@ dockerbuild-release:
 sonar:
   stage: sonar
   image:
-    name: sonarsource/sonar-scanner-cli:latest
+    name: sonarsource/sonar-scanner-cli:4.2
     entrypoint: [""]
   variables:
     SONAR_TOKEN: $SONAR_TOKEN
     SONAR_HOST_URL: $SONAR_HOST_URL
     GIT_DEPTH: 0
   script:
-    -ls -la
+    - ls -la
     - sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.branch.name=${CI_BUILD_REF_NAME} -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.login=$SONAR_LOGIN
   only:
     - /develop/
