fix(sonar): no more file analysed on sonar

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,9 +27,7 @@ build:
 test:
   stage: test
   image: node:12.14.1-alpine3.11
-  script: CI=true npm test -- --coverage
-  after_script:
-    - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls
+  script: CI=true npm test
 
 dockerbuild:
   extends: .template-docker-build
@@ -72,9 +70,7 @@ sonar:
     SONAR_TOKEN: $SONAR_TOKEN
     SONAR_HOST_URL: $SONAR_HOST_URL
     GIT_DEPTH: 0
-  script:
-    - ls -al
-    - sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.branch.name=${CI_BUILD_REF_NAME} -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.login=$SONAR_LOGIN
+  script: sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.branch.name=${CI_BUILD_REF_NAME} -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.login=$SONAR_LOGIN
   only:
     - /develop/
     - /master/
