--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.sourceEncoding=UTF-8
+sonar.sources=**/*.js
 sonar.host.url=https://sonarcloud.io
 sonar.exclusions=node_modules/**,**/*.test.js,cypress/**,src/enzyme.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
