--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,7 @@
+sonar.javascript.file.suffixes=.js,.jsx
+sonar.language=js
+sonar.sourceEncoding=UTF-8
+sonar.sources=.
+sonar.host.url=https://sonarcloud.io
+sonar.exclusions=node_modules/**,**/*.test.js,cypress/**,coverage/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
