--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,7 +72,7 @@ sonar:
     SONAR_TOKEN: $SONAR_TOKEN
     SONAR_HOST_URL: $SONAR_HOST_URL
     GIT_DEPTH: 0
-  script: sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.branch.name=${CI_BUILD_REF_NAME} -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.login=$SONAR_LOGIN
+  script: sonar-scanner -X -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.branch.name=${CI_BUILD_REF_NAME} -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.login=$SONAR_LOGIN
   only:
     - /develop/
     - /master/
