--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,7 @@ sonar.javascript.file.suffixes=.js,.jsx
 sonar.language=js
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
+sonar.test=**/*.test.js
 sonar.host.url=https://sonarcloud.io
 sonar.exclusions=node_modules/**,**/*.test.js,cypress/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
