--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,6 @@ cache:
   paths:
     - node_modules/
     - coverage/
-    - build/
 
 build:
   stage: build
@@ -28,6 +27,8 @@ test:
   stage: test
   image: node:12.14.1-alpine3.11
   script: CI=true npm test -- --coverage
+  after_script:
+    - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls
 
 dockerbuild:
   extends: .template-docker-build
