--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,9 @@ cache:
 build:
   stage: build
   image: node:12.14.1-alpine3.11
-  script: npm install && npm run build
+  script:
+    - npm install
+    - npm run build -- --clearCache
 
 test:
   stage: test
