--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.3",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.8.4",
     "auto-changelog": "1.16.2",
     "bootstrap": "4.4.1",
     "react": "16.12.0",
