fix(sonar): not analysing any file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,5 @@
+sonar.projectKey=front-ci
+sonar.organization=mspr-ci
 sonar.javascript.file.suffixes=.js,.jsx
 sonar.language=js
 sonar.sourceEncoding=UTF-8
