fix(sonar): not analysing any file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
-sonar.projectKey=front-ci
-sonar.organization=mspr-ci
+sonar.projectKey=github_highlander_front
+sonar.organization=msprci
 sonar.javascript.file.suffixes=.js,.jsx
 sonar.language=js
 sonar.sourceEncoding=UTF-8
-sonar.sources=.
+sonar.sources=src
 sonar.host.url=https://sonarcloud.io
 sonar.exclusions=node_modules/**,**/*.test.js,cypress/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
