--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ sonar:
     SONAR_TOKEN: $SONAR_TOKEN
     SONAR_HOST_URL: $SONAR_HOST_URL
     GIT_DEPTH: 0
-  script: sonar-scanner -X -Dsonar.branch.name=${CI_BUILD_REF_NAME}
+  script: sonar-scanner -Dsonar.branch.name=${CI_BUILD_REF_NAME}
   only:
     - /develop/
     - /master/
