--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,5 +5,5 @@ sonar.language=js
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.host.url=https://sonarcloud.io
-sonar.exclusions=node_modules/**,**/*.test.js,cypress/**
+sonar.exclusions=node_modules/**,**/*.test.js,cypress/**,src/enzyme.js,src/setupTests.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
