--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,6 @@ build:
   stage: build
   image: node:12.16.0-alpine3.11
   script:
-    - rm -rf coverage
     - npm install
     - npm run build
 
@@ -45,7 +44,7 @@ dockerbuild-develop:
   variables:
     API_URL: http://api.develop.highlander.fail
   only:
-    - /developp/
+    - /develop/
 
 dockerbuild-release:
   extends: .template-docker-build
